--- a/css/bobr.css
+++ b/css/bobr.css
@@ -1,12 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap');
+
 body {
   margin:0;
   padding:0;
   overflow-x: hidden;
-  height: 4000px;
 }
 .container {
   width: 840px;
   margin: 0 auto;
+  overflow: hidden;
 }
 .header {
   background: white;
@@ -264,6 +266,8 @@ figcaption {
 .cont {
   background: rgba(0, 0, 255, 0.103);
   border-radius: 5% 5%;
+  padding-bottom: 50px;
+  padding-top: 10px;
 }
 
 .popular {
@@ -311,9 +315,14 @@ figcaption {
   left: 60px;
   bottom: 23px
 }
+
+.inimg-img-1 {
+  padding-top: 11px;
+  padding-left: 11px
+}
 .inimg-img{ 
   padding-top: 11px;
-  padding-left: 11px;
+  padding-left: 13px;
 }
 
 .all-foto {
@@ -328,4 +337,196 @@ figcaption {
 }
 .foto2 {
   padding-top: 19px;
+}
+
+.scroll-img {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  margin-top: 30px;
+  margin-left: 20px;
+  gap: 50px;
+}
+
+.scroll {
+  border-radius: 20px 20px;
+  background: rgb(255, 255, 255);
+  text-align: center;
+  height: 313px;
+  line-height: 10px;
+}
+
+
+.sc-img {
+  padding-top: 20px;
+}
+
+.fig-img {
+  font-size:xx-small;
+  text-align: left;
+  padding-left: 20px;
+  font-family: 'PF DinText Pro';
+  color: rgba(129, 142, 174, 1);
+  height: 1px;
+}
+
+.fig-h5 {
+  font-family: 'PF DinText Pro';
+  font-size: 16px;
+  font-weight: 500;
+  text-align: left;
+  padding-left: 20px;
+  padding-bottom: 5px;
+  color: Blue;
+}
+
+.fig-h4 {
+  font-family: 'PF DinText Pro';
+  font-size: 22px;
+  color: orange;
+  padding-left: 20px;
+  text-align: left;
+  line-height: 0px;
+}
+
+.fig-p {
+  font-family: 'PF DinText Pro';
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(129, 142, 174, 1);
+  text-decoration: line-through;
+}
+
+.fig-button {
+  width: 150px;
+  height: 56px;
+  padding: 16px 8px 16px 8px;
+  border-radius: 1000px;
+  border: 1px solid Blue;
+  background: white;
+  color: blue;
+  gap: 12px;
+  margin-top: 15px;
+  margin-left: 5px;
+  font-family: 'PF DinText Pro';
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+.pre-footer {
+  text-align: center;
+  margin-top: 100px;
+  padding-bottom: 100px;
+}
+
+.pre-h3 {
+  font-family: PF DinText Pro;
+  font-size: 40px;
+  font-weight: 500;
+  letter-spacing: -0.01em;  
+  color:rgba(29, 54, 112, 1);
+  line-height: 1px;
+}
+
+.pre-p {
+  font-family: 'PF DinText Pro';
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 15px;
+  color: rgba(80, 80, 80, 1);
+}
+
+.pre-button {
+  width: 300px;
+  height: 60px;
+  padding: 16px 8px 16px 8px;
+  border-radius: 1000px;
+  gap: 12px;
+  background: orange;
+  color: white;
+  border: 0px;
+}
+
+.footer {
+  background: white;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 20px;
+  height: 50px;
+  padding: 24px;
+  border-radius: 16px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+}
+
+.footer-1 {
+  font-family: 'Jolly Lodger', cursive;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color:grey;
+}
+
+.footer-2 {
+  font-family: 'Jolly Lodger', cursive;
+  font-size: 26px;
+  font-weight: 400;
+  position: relative;
+  top: 20px;
+  right: 65px;
+  color: rgba(29, 54, 112, 1);
+}
+
+.reference-footer {
+  margin-left: 50px;
+  margin-top: 30px;
+  width: 300px;
+  display: grid;
+  grid-template-columns: 40% 40% 20%;
+  gap: 10px;
+  padding-bottom: 30px;
+}
+
+.close {
+  display: grid;
+  grid-template-columns: 50px 50px 2fr 1fr;
+  text-align: center;
+  height: 40px;
+}
+
+.close-img-1 {
+  padding-top: 24px;
+  padding-left: 35px;
+}
+.close-img-2{
+  padding-top: 24px;
+  padding-right: 5px;
+}
+
+.close-p {
+  font-family: 'Jolly Lodger', cursive;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: grey;
+  padding-left: 25px;
+}
+
+.close-h5 {
+  font-family: 'Jolly Lodger', cursive;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: right;
+  padding-right: 30px;
+  color: rgba(29, 54, 112, 1);
 }
